Fix mistake I made for javascript
Also added some to about us section

--- a/RecipePages/casserole1.html
+++ b/RecipePages/casserole1.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Dish Delight</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="/stylesheet.css">
         
         <section class="navbar">
@@ -59,11 +59,11 @@
             </ol>
         </section>
 	<!--Button bar section-->
-	<section class="buttonBar">
+	<div id="buttonBar">
 		<button onclick="copyRecipe()">Copy Recipe</button>
 		<button onclick="printPage()">Print Page</button>
 		<button onclick="goBack()">Go Back</button>
-    </section>
+    </div>
     </body>
 
     <footer>
