--- a/about.html
+++ b/about.html
@@ -43,21 +43,21 @@
             <p>Our Recipes is built and maintained by Lourdes "Lola" Renteria, Christian Tuarez, and Chris Charles, all of them
                 senior Computer Science students at the University of Houston-Downtown.</p>
         </div>
-        <section class="featured">
-            <h1>Featured Recipes</h1>
-            <p>Discover our most popular featured recipes, curated to inspire your next delicious meal!</p>
-            <div class="card-container">
+        <section class="creators">
+            <h1>Creators</h1>
+            <p>Discover The Minds Behind The Site</p>
+            <div class="creators-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/25286broccoli-cheese-casserole.png">
+                        <img src="OtherImages/Chris-headshot.png">
                     </div>
                     <div class="card-content">
-                        <h3>Broccoli Cheese Casserole</h3>
+                        <h3>Christopher Charles</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
                         ea quidem</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="" class="btn">Personal Site</a>
                     </div>
                 </div>
                 <div class="card">
@@ -65,12 +65,12 @@
                         <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
                     </div>
                     <div class="card-content">
-                        <h3>Air Fryer Mac & Cheese</h3>
+                        <h3>Christian Tuarez</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
                         ea quidem</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="" class="btn">Personal Site</a>
                     </div>
                 </div>
                 <div class="card">
@@ -78,26 +78,15 @@
                         <img src="recipe images/Buffalo-Chicken-Casserole.png">
                     </div>
                     <div class="card-content">
-                        <h3>Buffalo Chicken Casserole</h3>
+                        <h3>Lourdes "Lola" Renteria</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
                         ea quidem</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="" class="btn">Personal Site</a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="recipe images/Green-Spaghetti.jpg">
-                    </div>
-                    <div class="card-content">
-                        <h3>Green Spaghetti</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
-                    </div>
-                    <div class="button">
-                        <a href="" class="btn">Read More</a>
-                    </div>
-                </div>
+            </div>
+        </section>
     </body>
 </html>
