Categories Page has been stylized
Made recipe cards for each recipe and stylized them accordingly

--- a/categories.html
+++ b/categories.html
@@ -26,51 +26,234 @@
         </section>
     </head>
 
-    <body>
-        <div class="CategorySection">
-            <h2 id="SoupsSection">Soups</h2>
-            	<ul>
-                	<li><a href="RecipePages/soup1.html">Taco Soup</a></li>
-                	<li><a href="RecipePages/soup2.html">Easy Creamy Vegetable Soup</a></li>
-                	<li><a href="RecipePages/soup3.html">Easy Chicken Noodle Soup</a></li>
-            	</ul> 
-        </div>
+    <body> 
+        <section class="categories">
+            <h1>Soups</h1>
+            <div class="category-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Taco-Soup-foodiecrush.com-010.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Taco Soup</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/soup1.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/Homemade-Creamy-Vegtable-Soup-Recipe-1200.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Creamy Vegetable Soup</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/soup2.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/quick-and-easy-chicken-noodle-soup-allrecipes.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Chicken Noodle Soup</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/soup3.html" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="CategorySection">
-            <h2 id="DessertsSection">Desserts</h2>
-		<ul>
-                	<li><a href="RecipePages/dessert1.html">Earl Grey Cake</a></li>
-                	<li><a href="RecipePages/dessert2.html">Pineapple Sherbet</a></li>
-                	<li><a href="RecipePages/dessert3.html">Oreo Cheesecake Cookies</a></li>
-            	</ul>
-        </div>
+        <section class="categories">
+            <h1>Desserts</h1>
+            <div class="category-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Earl-Grey-Cake.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Earl Grey Cake</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/dessert1.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Pineapple-Sherbet_.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Pineapple Sherbet</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/dessert2.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/Oreo-Cheesecake-Cookies.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Oreo Cheesecake Cookies</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/dessert3.html" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="CategorySection">
-            <h2 id="CasserolesSection">Casseroles</h2>
-	    	<ul>
-                	<li><a href="RecipePages/casserole1.html">Broccoli Cheese Casserole</a></li>
-                	<li><a href="RecipePages/casserole2.html">Buffalo Chicken Casserole</a></li>
-                	<li><a href="RecipePages/casserole3.html">Sausage Breakfast Casserole</a></li>
-            	</ul>
-        </div>
+        <section class="categories">
+            <h1>Casseroles</h1>
+            <div class="category-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/25286broccoli-cheese-casserole.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Broccoli Cheese Casserole</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/casserole1.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Buffalo-Chicken-Casserole.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Buffalo Chicken Casserole</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/casserole2.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/Sausage-Breakfast-Casseroled.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Sausage Breakfast Casserole</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/casserole3.html" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="CategorySection">
-            <h2 id="CrockpotsSection">Crockpots</h2>
-	    	<ul>
-                	<li><a href="RecipePages/crockpot1.html">Crockpot Apple Cider</a></li>
-                	<li><a href="RecipePages/crockpot2.html">Pozole Rojo</a></li>
-                	<li><a href="RecipePages/crockpot3.html">Pumpkin Cranberry Bread Pudding</a></li>
-            	</ul>
-        </div>
+        <section class="categories">
+            <h1>Crockpots</h1>
+            <div class="category-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Crockpot-Apple-Cider.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Crockpot Apple Cider</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/crockpot1.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/pozole rojo.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Pozole Rojo</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/crockpot2.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/Pumpkin-Cranberry-Bread-Pudding.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Pumpkin Cranberry Bread Pudding</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/crockpot3.html" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="CategorySection">
-            <h2 id="PastasSection">Pastas</h2>
-	    	<ul>
-                	<li><a href="RecipePages/pasta1.html">Green Spaghetti</a></li>
-                	<li><a href="RecipePages/pasta2.html">Air-Fryer Mac & Cheese</a></li>
-                	<li><a href="RecipePages/pasta3.html">Mexican Macaroni Salad</a></li>
-            	</ul>
-        </div>
+        <section class="categories">
+            <h1>Pastas</h1>
+            <div class="category-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/Green-Spaghetti.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Green Spaghetti</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/pasta1.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
+                    </div>
+                    <div class="card-content">
+                        <h3>Air Fryer Mac & Cheese</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/pasta2.html" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="/recipe images/ensalada_de_coditos_mexican_style.png">
+                    </div>
+                    <div class="card-content">
+                        <h3>Mexican Macoroni Salad</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="/RecipePages/pasta3.html" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
     </body>
 
 </html>
