updated about us page with my image, and alphabetized our names. updated each section of categories with link in header so dropdown menu jumps to the section it corresponds to.

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
         <div id="aboutWebsite">
             <!--At least 2 paragraphs regarding the inspiration for this page
             ie: we're doing it as a class project, sharing some of our favorite recipes, etc.-->
-            <h2>About Our Recipes:</h2>
-            <p>Our Recipes was created as a fun way to fulfill the project requirements for the Web Programming class at the
+            <h2>About Dish Delight:</h2>
+            <p>Dish Delight was created as a fun way to fulfill the project requirements for the Web Programming class at the
                 University of Houston-Downtown, and a place to put all of our favorite recipes into one place! Spanning different
                 categories, from crockpot recipes to pastas and all the way to desserts, we believe there is something for everyone!</p>
             <p>We hope you have half as much fun combing through, cooking and enjoying these recipes as we did compiling them!
@@ -40,8 +40,7 @@
         <div id="aboutUs">
             <!--About us section: can include picture and small paragraph about ourselves, even include website or github link-->
             <h2>About Us:</h2>
-            <p>Our Recipes is built and maintained by Lourdes "Lola" Renteria, Christian Tuarez, and Chris Charles, all of them
-                senior Computer Science students at the University of Houston-Downtown.</p>
+            <p>Dish Delight is built and maintained by Chris Charles, Lourdes "Lola" Renteria, and Christian Tuarez, senior Computer Science students at the University of Houston-Downtown.</p>
         </div>
         <section class="creators">
             <h1>Creators</h1>
@@ -60,6 +59,21 @@
                         <a href="" class="btn">Personal Site</a>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="img-container">
+                        <img src="OtherImages/Lola.JPG">
+                    </div>
+                    <div class="card-content">
+                        <h3>Lourdes "Lola" Renteria</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
+                        ea quidem</p>
+                    </div>
+                    <div class="button">
+                        <a href="" class="btn">Personal Site</a>
+                    </div>
+                </div>
+           
                 <div class="card">
                     <div class="img-container">
                         <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
@@ -72,20 +86,7 @@
                     <div class="button">
                         <a href="" class="btn">Personal Site</a>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="recipe images/Buffalo-Chicken-Casserole.png">
-                    </div>
-                    <div class="card-content">
-                        <h3>Lourdes "Lola" Renteria</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
-                    </div>
-                    <div class="button">
-                        <a href="" class="btn">Personal Site</a>
-                    </div>
-                </div>
+                </div> 
             </div>
         </section>
     </body>
