--- a/categories.html
+++ b/categories.html
@@ -28,7 +28,7 @@
 
     <body> 
         <section class="categories">
-            <h1>Soups</h1>
+            <a id="SoupsSection"><h1>Soups</h1></a>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
@@ -73,7 +73,7 @@
         </section>
 
         <section class="categories">
-            <h1>Desserts</h1>
+           <a id="DessertsSection"> <h1>Desserts</h1> </a>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
@@ -118,7 +118,7 @@
         </section>
 
         <section class="categories">
-            <h1>Casseroles</h1>
+            <a id="CasserolesSection"> <h1>Casseroles</h1> </a>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
@@ -163,7 +163,7 @@
         </section>
 
         <section class="categories">
-            <h1>Crockpots</h1>
+            <a id="CrockpotsSection"> <h1>Crockpots</h1> </a>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
@@ -208,7 +208,7 @@
         </section>
 
         <section class="categories">
-            <h1>Pastas</h1>
+            <a id="Pastas"> <h1>Pastas</h1> </a>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
