--- a/homepage.html
+++ b/homepage.html
@@ -13,10 +13,10 @@
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
                         <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="categories.html#Soups">Soups</a>
+                        <a href="categories.html#Desserts">Desserts</a>
+                        <a href="categories.html#Casseroles">Casseroles</a>
+                        <a href="categories.html#Crockpots">Crockpots</a>
                         <a href="categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
@@ -45,54 +45,50 @@
             <div class="card-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/25286broccoli-cheese-casserole.png">
+                        <img src="RecipeImages/25286broccoli-cheese-casserole.png">
                     </div>
                     <div class="card-content">
                         <h3>Broccoli Cheese Casserole</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>A great recipe for those cold days where you just want to snuggle and sit by a fireplace!</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="RecipePages/casserole1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
+                        <img src="RecipeImages/Air-Fryer-Mac-and-Cheese.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Air Fryer Mac & Cheese</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Bring a winner plate to your next party with this mouth-watering recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="RecipePages/pasta2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Buffalo-Chicken-Casserole.png">
+                        <img src="RecipeImages/Buffalo-Chicken-Casserole.png">
                     </div>
                     <div class="card-content">
                         <h3>Buffalo Chicken Casserole</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Get in the big game spirit with this amazing, surprisingly simple recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="RecipePages/casserole2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Green-Spaghetti.jpg">
+                        <img src="RecipeImages/Green-Spaghetti.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Green Spaghetti</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>A Mexican twist on a classic, this recipe is sure to wow your guests!</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Read More</a>
+                        <a href="RecipePages/pasta1.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
